--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@mipmap/wou_torch"
+        android:label="WOU Am I"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <!--
+            <!-"@string/app_name"-->
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
@@ -28,9 +29,16 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <!--
         <activity
             android:name=".CampusMapActivity"
             android:label="@string/title_activity_campus_map">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                -->
+        <activity
+            android:name=".CampusMapActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
